#4557 - Survey logo alignment Fixes #4557

--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -2,7 +2,8 @@
   display: flex;
 }
 .sd-title {
-  display: block;
+  display: flex;
+  align-items: center;
   font-family: $font-family;
   font-style: normal;
   color: $foreground;
